# myvoice

./: .gitignore  Makefile  README.md  SPEC.md  biome.json  playwright.config.ts  pyproject.toml
.github/workflows/: api-tests.yml  validate-packs.yml  web-tests.yml
docs/superpowers/plans/: 2026-05-22-phase-1-foundation.md  2026-05-22-phase-2-style-pack-format-and-core-tools.md  2026-05-22-phase-4-compose-and-test.md  2026-05-22-phase-5-new-pack-and-manifest-forms.md  2026-05-22-phase-6-extract-from-urls.md  2026-05-26-phase-7-entries-export-library.md  2026-06-02-writing-craft-baseline.md  2026-06-04-shared-ai-tells.md  2026-06-05-defaults-visibility-color.md  2026-06-05-light-redesign.md
docs/superpowers/specs/: 2026-05-22-myvoice-design.md  2026-05-22-phase-4-compose-and-test-design.md  2026-05-22-phase-5-new-pack-and-manifest-forms-design.md  2026-05-22-phase-6-extract-from-urls-design.md  2026-05-26-phase-7-entries-export-library-design.md  2026-06-02-writing-craft-baseline-design.md  2026-06-04-shared-ai-tells-design.md  2026-06-05-defaults-visibility-color-design.md  2026-06-05-light-redesign-design.md
e2e/: compose-rewrite.spec.ts  entries-and-zip.spec.ts  extract-flow.spec.ts  pack-lifecycle.spec.ts  settings-keys.spec.ts
packs/_template/: stylepack.yaml
packs/_template/bios/: conference-speaker.md  linkedin-about.md
packs/dan/: style-guide.md  stylepack.yaml
packs/dan/bios/: book-jacket.md  conference-speaker.md  linkedin-about.md  twitter.md
packs/dan/formats/: blog-post.md  conference-abstract.md  demo-script.md  internal-slack.md  keynote-opener.md  linkedin-post.md  tweet-thread.md  video-script.md
packs/dan/samples/: 01-database-ai-tool-opener.md  02-build-command-opener.md  03-tanzu-ai-platform-opener.md  04-mcp-enterprise-opener.md
scripts/: dev.sh  install-local.sh  run-local.sh
